--- a/Store/Store.vcxproj.filters
+++ b/Store/Store.vcxproj.filters
@@ -39,4 +39,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="DatosProductos.txt">
+      <Filter>Archivos de origen</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
